# reversi_xt_2

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  makefile
GameDatastructure/: Board.cpp
include/: CommunicationManager.hpp  ServerMessage.hpp  moveUtils.h
includes/: moveUtils.h
lib/: README.md
ressources/config/: client_globals.rc
ressources/constants/: constants.cpp  constants.h
src/: CMakeLists.txt  constants.cpp
src/ConstantsHandling/: CMakeLists.txt  constants.cpp
src/ServerConnection/: CMakeLists.txt  CommunicationManager.cpp  ServerMessage.cpp
src/Utilities/: CMakeLists.txt  moveUtils.cpp  moveUtils.h
test/: CMakeLists.txt  moveUtils_test.cpp
utilities/: moveUtils.cpp
